--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "build": "electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^14.0.1"
+    "electron": "^14.0.1",
+    "electron-builder": "^22.11.7"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
