--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "build": {
+    "productName": "Sidebar"
+  },
   "devDependencies": {
     "electron": "^14.0.1",
     "electron-builder": "^22.11.7"
